# RMMD

./: CONTRIBUTING.md  README.md  pyproject.toml
examples/: README.md  butane_thermo.yaml  jobs.yaml  methamine.yaml  methanimine.yaml  minimal.yaml  stepwise.yaml
src/rmess/: kinetics.py  metadata.py  rmess.py  schema.py  species.py  thermo.py
src/rmmd/: _base.py  calc.py  cli.py  identifiers.py  keys.py  kinetics.py  metadata.py  pes.py  registry.py  rmess.py  schema.py  species.py  test.py  thermo.py
src/rmmd/cff/: cff_1_2_0.py
tests/: test_examples.py  test_registry.py  test_rmmd.py
tests/rmmd/: test_elementary_reaction.yaml  test_general_calculation.yaml  test_metadata_direct_reference.yaml  test_metadata_reference.yaml  test_pes_geometries.yaml  test_pes_geometry.yaml  test_species_string_identifiers.yaml
