[project]
authors = [{name = "Andreas Copan", email = "avcopan@gmail.com"}]
dependencies = [
    "pydantic>=2.10.0,<3",
    "pyyaml>=5.4.1,<7",
    "pytest>=8.0,<9"
]
description = "Add a short description here"
name = "rmess"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
rmess = { path = ".", editable = true }

[tool.pixi.tasks]
